# stock-bot

./: .gitignore  CLAUDE.md  LICENSE  README_zh.md  product.md  pyproject.toml
.github/: copilot-instructions.md
src/cli/: __init__.py  main.py  universe.py
src/config/: __init__.py  sse.sample.yaml
src/fetchers/sse/: __init__.py  client.py  fetcher.py
src/models/: __init__.py  config.py  manifest.py  stock.py
src/normalizers/: __init__.py  sse.py
src/storage/: __init__.py  universe.py
